// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Salaire /> should render mixed work period 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
}

.c2 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #fff;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c20 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 0;
  vertical-align: initial;
  line-height: initial;
  color: #0053b3;
  font-weight: normal;
  font-size: inherit;
  background: none;
  border: none;
  border-radius: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c20:focus,
.c20:hover,
.c20:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  padding: 0;
  font-size: 1.5rem;
  text-align: center;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 2em;
}

.c8 {
  width: 14rem;
}

.c9 {
  width: 8.5rem;
}

.c10 {
  width: 8.5rem;
}

.c6 {
  position: relative;
}

.c7 {
  display: block;
  position: absolute;
  top: -1.5rem;
}

.c11 {
  border: none;
  width: 100%;
  margin-top: 1rem;
}

.c12 {
  background: none;
}

.c13 {
  text-align: left;
  border: none;
  border-bottom: 1px solid rgba(0,0,0,0.5);
}

.c14 {
  text-align: right;
  border: none;
  border-bottom: 1px solid rgba(0,0,0,0.5);
}

.c15 {
  border-color: transparent;
}

.c16 {
  text-align: left;
  border: none;
}

.c17 {
  text-align: right;
  border: none;
}

.c18 {
  font-size: 0.8rem;
  opacity: 0.8;
}

.c19 {
  width: 25%;
  white-space: nowrap;
  border: none;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c2 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h2>
          Avez-vous alterné au cours de votre contrat de travail des périodes de travail à temps plein et à temps partiel sur le même contrat ?
        </h2>
        <div
          class="c3"
        >
          <label
            class="c4"
          >
            <input
              checked=""
              name="has-temps-partiel"
              type="radio"
              value="yes"
            />
             
            Oui
          </label>
          <label
            class="c4"
          >
            <input
              name="has-temps-partiel"
              type="radio"
              value="no"
            />
             
            Non
          </label>
        </div>
        <form>
          <div
            class="c5"
          >
            <label
              class="c6"
            >
              <span
                class="c7"
              >
                type
              </span>
              <select
                class="c8"
                name="type"
              >
                <option
                  value="temps-partiel"
                >
                  Temps partiel
                </option>
                <option
                  value="temps-plein"
                >
                  Temps plein
                </option>
              </select>
            </label>
            <label
              class="c6"
            >
              <span
                class="c7"
              >
                durée (en mois)
              </span>
              <input
                class="c9"
                min="0"
                name="duree"
                placeholder="8 mois"
                type="number"
                value=""
              />
            </label>
            <label
              class="c6"
            >
              <span
                class="c7"
              >
                salaire mensuel
              </span>
              <input
                class="c10"
                min="0"
                name="salaire"
                placeholder="€"
                type="number"
                value=""
              />
            </label>
            <button
              class="btn"
              disabled=""
            >
              Ajouter la période
            </button>
          </div>
        </form>
        <table
          class="c11"
        >
          <thead
            class="c12"
          >
            <tr>
              <th
                class="c13"
              >
                Type
              </th>
              <th
                class="c14"
              >
                Durée
              </th>
              <th
                class="c14"
              >
                Salaire
              </th>
              <th
                class="c15"
              />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="c16"
              >
                Temps plein
              </td>
              <td
                class="c17"
              >
                10
                <span
                  class="c18"
                >
                  mois
                </span>
              </td>
              <td
                class="c17"
              >
                1300
                <span
                  class="c18"
                >
                  €
                </span>
              </td>
              <td
                class="c19"
              >
                <button
                  aria-pressed="false"
                  class="c20"
                >
                  Modifier
                </button>
                 – 
                <button
                  aria-pressed="false"
                  class="c20"
                >
                  Supprimer
                </button>
              </td>
            </tr>
            <tr>
              <td
                class="c16"
              >
                Temps partiel
              </td>
              <td
                class="c17"
              >
                10
                <span
                  class="c18"
                >
                  mois
                </span>
              </td>
              <td
                class="c17"
              >
                1000
                <span
                  class="c18"
                >
                  €
                </span>
              </td>
              <td
                class="c19"
              >
                <button
                  aria-pressed="false"
                  class="c20"
                >
                  Modifier
                </button>
                 – 
                <button
                  aria-pressed="false"
                  class="c20"
                >
                  Supprimer
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      style="display: flex; flex-direction: row; margin-top: 20px; font-size: 1rem;"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`<Salaire /> should render single work period 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
}

.c2 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #fff;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  padding: 0;
  font-size: 1.5rem;
  text-align: center;
  width: 6em;
}

.c4 {
  padding: 0;
  font-size: 1.5rem;
  text-align: center;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c2 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h2>
          Avez-vous alterné au cours de votre contrat de travail des périodes de travail à temps plein et à temps partiel sur le même contrat ?
        </h2>
        <div
          class="c3"
        >
          <label
            class="c4"
          >
            <input
              name="has-temps-partiel"
              type="radio"
              value="yes"
            />
             
            Oui
          </label>
          <label
            class="c4"
          >
            <input
              checked=""
              name="has-temps-partiel"
              type="radio"
              value="no"
            />
             
            Non
          </label>
        </div>
        <h2>
          Derniers mois de salaire
        </h2>
        <table
          style="font-size: 1.2em;"
          width="100%"
        >
          <thead>
            <tr>
              <td
                style="text-align: center; font-weight: bold;"
                width="140"
              >
                Mois
              </td>
              <td
                style="text-align: center; font-weight: bold;"
                width="200"
              >
                Salaire brut mensuel
              </td>
            </tr>
          </thead>
          <tbody>
            <tr
              style="background: rgb(221, 221, 221);"
            >
              <td>
                Dernier salaire
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c5"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
              <td
                rowspan="3"
                style="text-align: center; background: rgb(221, 221, 221);"
                valign="middle"
              >
                trois derniers
                <br />
                mois de salaire
              </td>
            </tr>
            <tr
              style="background: rgb(221, 221, 221);"
            >
              <td>
                Salaire m-1
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c5"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr
              style="background: rgb(221, 221, 221);"
            >
              <td>
                Salaire m-2
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c5"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr>
              <td>
                Salaire m-3
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c5"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr>
              <td>
                Salaire m-4
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c5"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr>
              <td>
                Salaire m-5
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c5"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr>
              <td>
                Salaire m-6
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c5"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      style="display: flex; flex-direction: row; margin-top: 20px; font-size: 1rem;"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`<Salaire /> should switch from single period to mixed period 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
}

.c2 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #fff;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  padding: 0;
  font-size: 1.5rem;
  text-align: center;
  width: 6em;
}

.c4 {
  padding: 0;
  font-size: 1.5rem;
  text-align: center;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c2 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h2>
          Avez-vous alterné au cours de votre contrat de travail des périodes de travail à temps plein et à temps partiel sur le même contrat ?
        </h2>
        <div
          class="c3"
        >
          <label
            class="c4"
          >
            <input
              name="has-temps-partiel"
              type="radio"
              value="yes"
            />
             
            Oui
          </label>
          <label
            class="c4"
          >
            <input
              checked=""
              name="has-temps-partiel"
              type="radio"
              value="no"
            />
             
            Non
          </label>
        </div>
        <h2>
          Derniers mois de salaire
        </h2>
        <table
          style="font-size: 1.2em;"
          width="100%"
        >
          <thead>
            <tr>
              <td
                style="text-align: center; font-weight: bold;"
                width="140"
              >
                Mois
              </td>
              <td
                style="text-align: center; font-weight: bold;"
                width="200"
              >
                Salaire brut mensuel
              </td>
            </tr>
          </thead>
          <tbody>
            <tr
              style="background: rgb(221, 221, 221);"
            >
              <td>
                Dernier salaire
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c5"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
              <td
                rowspan="3"
                style="text-align: center; background: rgb(221, 221, 221);"
                valign="middle"
              >
                trois derniers
                <br />
                mois de salaire
              </td>
            </tr>
            <tr
              style="background: rgb(221, 221, 221);"
            >
              <td>
                Salaire m-1
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c5"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr
              style="background: rgb(221, 221, 221);"
            >
              <td>
                Salaire m-2
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c5"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr>
              <td>
                Salaire m-3
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c5"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr>
              <td>
                Salaire m-4
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c5"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr>
              <td>
                Salaire m-5
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c5"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
            <tr>
              <td>
                Salaire m-6
              </td>
              <td
                style="text-align: center;"
              >
                <input
                  class="c5"
                  size="6"
                  type="number"
                  value="1500"
                />
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      style="display: flex; flex-direction: row; margin-top: 20px; font-size: 1rem;"
    >
      <div />
    </div>
  </div>
</div>
`;
